--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,26 @@
 }
 
 .calculator-card {
+  margin: 0 auto;
+  display: block;
+  max-width: 600px;
+}
+
+.calculator-body {
   margin: 10px;
   padding: 10px;
+}
+
+.window-card {
+  margin: 0 10px;
+}
+
+.digit-card {
+  margin: 10px 0 0 10px;
+}
+
+.function-card {
+  margin: 10px 10px 0 0;
 }
 
 footer {
