Added and styled operations buttons

--- a/src/Digits.css
+++ b/src/Digits.css
@@ -7,7 +7,7 @@
   background: #ca6680;
   border: 1px solid #ca6680;
   border-radius: 4px;
-  color: white;
+  color: #efd1d9;
   display: block;
   font-size: 24px;
   margin: 0 auto;
