Got rid of the card borders
Digit card and operations card

--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,12 @@
 }
 
 .digit-card {
+  border: none;
   margin: 10px 0 0 10px;
 }
 
 .operations-card {
+  border: none;
   margin: 10px 10px 0 0;
 }
 
